set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include/imh )
add_library(mt19937-64 mt19937-64)
add_library(array_lists array_lists)
add_library(listdb listdb)
add_library(iminhash iminhash)
add_library(imhsearch imhsearch)
add_library(imh SHARED imhsearch iminhash listdb array_lists mt19937-64)
install(TARGETS imh LIBRARY DESTINATION /usr/lib)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/imh DESTINATION /usr/include)
