set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include/imh )
add_executable( test_iminhash test_iminhash )
target_link_libraries( test_iminhash iminhash listdb array_lists mt19937-64 m)
add_executable( test_imhsearch test_imhsearch )
target_link_libraries( test_imhsearch imhsearch iminhash listdb array_lists mt19937-64 m)
